errors/error_log_20250510_193623.txt
==================================================
TIMESTAMP: 2025-05-10 19:36:23
TYPE: Frontend Error
MESSAGE: Failed to compile.

[eslint] 
src\components\TermsOfService.js
Syntax error: Unexpected token (174:7) (174:7)

==================================================

==================================================
TIMESTAMP: 2025-05-10 19:36:23
TYPE: Frontend Error
MESSAGE: [1m[33mWARNING[39m[22m in [1m[eslint] 
src\components\Admin.js
  Line 13:22:  'setSystemData' is assigned a value but never used  no-unused-vars
  Line 121:9:  'API_URL' is assigned a value but never used        no-unused-vars

[39m[22m

[1m[31mERROR[39m[22m in [1m./src/components/TermsOfService.js[39m[22m
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: C:\Users\Cila\Desktop\re-chat.to\src\components\TermsOfService.js: Unexpected token (174:7)

[0m [90m 172 |[39m
 [90m 173 |[39m [36mexport[39m [36mdefault[39m [33mTermsOfService[39m[33m;[39m
[31m[1m>[22m[39m[90m 174 |[39m       [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m     |[39m        [31m[1m^[22m[39m
 [90m 175 |[39m     [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m 176 |[39m   )[33m;[39m
 [90m 177 |[39m }[33m;[39m[0m
    at constructor (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:360:19)
    at FlowParserMixin.raise (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:6613:19)
    at FlowParserMixin.unexpected (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:6633:16)
    at FlowParserMixin.jsxParseIdentifier (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:4575:12)
    at FlowParserMixin.jsxParseNamespacedName (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:4582:23)
    at FlowParserMixin.jsxParseElementName (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:4591:21)
    at FlowParserMixin.jsxParseOpeningElementAt (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:4667:22)
    at FlowParserMixin.jsxParseElementAt (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:4692:33)
    at FlowParserMixin.jsxParseElement (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:4755:17)
    at FlowParserMixin.parseExprAtom (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:4765:19)
    at FlowParserMixin.parseExprSubscripts (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:10992:23)
    at FlowParserMixin.parseUpdate (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:10977:21)
    at FlowParserMixin.parseMaybeUnary (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:10957:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:10810:61)
    at FlowParserMixin.parseExprOps (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:10815:23)
    at FlowParserMixin.parseMaybeConditional (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:10792:23)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:10745:21)
    at C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:3504:39
    at FlowParserMixin.tryParse (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:6922:20)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:3504:18)
    at FlowParserMixin.parseExpressionBase (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:10698:23)
    at C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:10694:39
    at FlowParserMixin.allowInAnd (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:12329:16)
    at FlowParserMixin.parseExpression (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:10694:17)
    at FlowParserMixin.parseStatementContent (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:12771:23)
    at FlowParserMixin.parseStatementLike (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:12644:17)
    at FlowParserMixin.parseStatementLike (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:2922:24)
    at FlowParserMixin.parseModuleItem (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:12621:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:13192:36)
    at FlowParserMixin.parseBlockBody (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:13185:10)
    at FlowParserMixin.parseProgram (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:12514:10)
    at FlowParserMixin.parseTopLevel (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:12504:25)
    at FlowParserMixin.parseTopLevel (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:3691:28)
    at FlowParserMixin.parse (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:14364:10)
    at parse (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\parser\lib\index.js:14398:38)
    at parser (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\core\lib\parser\index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\core\lib\transformation\normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\core\lib\transformation\index.js:22:50)
    at run.next (<anonymous>)
    at transform (C:\Users\Cila\Desktop\re-chat.to\node_modules\@babel\core\lib\transform.js:22:33)
    at transform.next (<anonymous>)
    at step (C:\Users\Cila\Desktop\re-chat.to\node_modules\gensync\index.js:261:32)
    at C:\Users\Cila\Desktop\re-chat.to\node_modules\gensync\index.js:273:13
    at async.call.result.err.err (C:\Users\Cila\Desktop\re-chat.to\node_modules\gensync\index.js:223:11)

[1m[31mERROR[39m[22m in [1m[eslint] 
src\components\TermsOfService.js
  Line 174:7:  Parsing [1m[31merror[39m[22m[1m: [1m[31mUnexpected[39m[22m[1m token (174:7)

[39m[22m

webpack compiled with [1m[31m2 errors[39m[22m and [1m[33m1 warning[39m[22m

==================================================

